# nanodecoder

./: .gitignore  ATTRIBUTIONS.md  DENSE_GPT_INTERNALS.md  GPT_INTERNALS.md  LICENSE  MOE_GPT_INTERNALS.md  PRODUCTION_MOE_GPT_INTERNALS.md  README.md  from_scratch_ddp.py  pyproject.toml  requirements.txt
dense_gpt/: __init__.py
dense_gpt/models/: attention.py
dense_gpt/train/: gpt_trainer.py
dense_gpt/utils/: instruction_head_utils.py  training_utils.py
gpt/: config.yaml
gpt/evaluate/: run_hellaswag_eval.py
gpt/models/: gpt.py  mlp.py  normalization.py  router.py  transformer.py
gpt/train/: config.yaml  trainer.py
gpt/utils/: __init__.py  dataloader.py  ddp_utils.py  generation.py  hellaswag_evaluator.py  training_utils.py  vocab_utils.py  wandb_utils.py
gpt/weights_loader/: gpt2_weights_evaluator.py
gpt_moe/: config.yaml
gpt_moe/models/: attention.py  experts.py  feedforward.py  gpt.py  moe_layer.py  normalization.py  router.py  transformer.py
gpt_moe/train/: config.yaml  gpt_trainer.py  trainer_distributed_gpu.py  trainer_mixed_precision.py  trainer_on_cpu.py  trainer_on_gpu.py
gpt_moe/utils/: gpt2_weights_loader.py  params_util.py  tokenizer.py
moe_gpt/: config.yaml
moe_gpt/evaluate/: run_hellaswag_eval.py
moe_gpt/models/: __init__.py  activations.py  moe_layer.py
moe_gpt/train/: __init__.py  trainer_distributed_gpu.py  trainer_mixed_precision.py  trainer_on_cpu.py  trainer_on_gpu.py
moe_gpt/utils/: __init__.py  checkpoint_utils.py  classification_head_utils.py  hellaswag_utils.py  initialization_utils.py  memory_utils.py  (+3 more)
(+18 files in other folders)
